[project]
name = "flask-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-pymongo>=3.0.1",
    "gunicorn>=23.0.0",
    "motor>=3.7.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.10.6",
    "pymongo>=4.11.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
